--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
 spring.security.filter.order=10
-api.security.filter=true
+api.security.filter=false
+download.maximum.page.size=50
